--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,23 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline;
+  padding: 5px;
+}
+.nav-wrapper {
+  min-width: 100%;
+}
+.nav-link:hover {
+  color: rgb(81, 255, 0);
+}
+ul.nav-pills > li.nav-link:active {
+  background-color: royalblue;
+  color: rgb(81, 255, 0);
 }
